--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&display=swap');
+
 *{
     padding: 0;
     margin: 0;
-    font-family: cursive;
+    font-family: "Baloo Da 2";
 }
 
 body{
