--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ body{
     width: 100%;
     height: 100%;
     background-color: #fafafa;
-    border-radius: 20px;
-    box-shadow: 2px 2px 4px #000;
+    border-radius: 15px;
+    box-shadow: 3px 3px 5px #000;
 }
 
 .container h1{
@@ -34,7 +34,7 @@ body{
 
 #tempo{
     font-size: 150px;
-    font-weight: bolder;
+    font-weight: 600;
     text-align: center;
 }
 
@@ -42,21 +42,24 @@ body{
     display: flex;
     justify-content: center;
     font-weight: lighter;
-    margin: 15px;
+    margin: 10px;
 }
 
 h3{
-    margin-right: 3px;
+    margin-right: 4px;
     text-shadow: 1px 1px 1px #fff;
 }
 
 .container select{
     border: none;
     border-radius: 5px;
+    padding: 0 3px;
+    height: 25px;
     width: 40px;
     background-color: #f0f0fa;
     box-shadow: 1px 1px 3px #bbb;
-    font-weight: 600;
+    font-size: 16px;
+    font-weight: 800;
 }
 
 .btn{
@@ -68,7 +71,7 @@ h3{
     font-weight: bolder;
     border: none;
     border-radius: 5px;
-    box-shadow: 1px 1px 2px #0008;
+    box-shadow: 1px 1px 3px #0008;
 }
 
 .pausas{
