--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,10 @@ body{
 }
 
 .ms{
+    width: 150px;
     display: flex;
-    justify-content: center;
-    font-weight: lighter;
-    margin: 10px;
-}
-
-h3{
-    margin-right: 5px;
-    text-shadow: 1px 1px 1px #fff;
+    justify-content: space-between;
+    margin: 10px auto;
 }
 
 .container select{
@@ -59,12 +54,13 @@ h3{
     background-color: #f0f0fa;
     box-shadow: 1px 1px 3px #bbb;
     font-size: 16px;
-    font-weight: 800;
+    font-weight: 700;
     cursor: pointer;
 }
 
 .listaMS{
     font-weight: 800;
+    width: 100px;
 }
 
 .btn{
