--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body{
 }
 
 .container{
-    max-width: 600px;
+    width: 44%;
+    min-width: 44%;
     max-height: 70vh;
     margin: 5% auto 0 auto;
 }
@@ -64,7 +65,7 @@ body{
 }
 
 .btn{
-    width: 120px;
+    min-width: 23%;
     height: 40px;
     background-color: rgb(57, 177, 224);
     color: #fff;
