--- a/css/style.css
+++ b/css/style.css
@@ -11,75 +11,157 @@ body{
     color: #000;
 }
 
-.container{
-    width: 44%;
-    min-width: 44%;
-    max-height: 70vh;
-    margin: 5% auto 0 auto;
+
+@media only screen and (min-device-width: 700px){
+
+    .container{
+        max-width: 600px;
+        max-height: 70vh;
+        margin: 5% auto 0 auto;
+    }
+
+    .conteudo{
+        width: 100%;
+        height: 100%;
+        background-color: #fafafa;
+        border-radius: 15px;
+        box-shadow: 3px 3px 5px #000;
+    }
+    
+    .container h1{
+        text-transform: uppercase;
+        width: 100%;
+        padding: 10px 0;
+        text-align: center;
+    }
+    
+    #tempo{
+        font-size: 150px;
+        font-weight: 600;
+        text-align: center;
+    }
+    
+    .ms{
+        width: 150px;
+        display: flex;
+        justify-content: space-between;
+        margin: 10px auto;
+    }
+    
+    .container select{
+        border: none;
+        border-radius: 5px;
+        height: 25px;
+        width: 44px;
+        text-align: center;
+        background-color: #f0f0fa;
+        box-shadow: 1px 1px 3px #bbb;
+        font-size: 16px;
+        font-weight: 700;
+        cursor: pointer;
+    }
+    
+    .listaMS{
+        font-weight: 800;
+        width: 100px;
+    }
+    
+    .btn{
+        min-width: 120px;
+        height: 40px;
+        background-color: rgb(57, 177, 224);
+        color: #fff;
+        font-size: 15px;
+        font-weight: bolder;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 1px 1px 3px #0008;
+        cursor: pointer;
+    }
+    
+    .pausas{
+        padding: 4%;
+        margin: 0 4%;
+        display: flex;
+        justify-content: space-between;
+    }
+
 }
 
-.conteudo{
-    width: 100%;
-    height: 100%;
-    background-color: #fafafa;
-    border-radius: 15px;
-    box-shadow: 3px 3px 5px #000;
-}
+@media only screen and (max-device-width: 700px){
 
-.container h1{
-    text-transform: uppercase;
-    width: 100%;
-    padding: 10px 0;
-    text-align: center;
-}
+    .container{
+        max-width: 400px;
+        max-height: 56vh;
+        margin: 5% auto 0 auto;
+    }
 
-#tempo{
-    font-size: 150px;
-    font-weight: 600;
-    text-align: center;
-}
+    .conteudo{
+        width: 100%;
+        height: 100%;
+        background-color: #fafafa;
+        border-radius: 10px;
+        box-shadow: 3px 3px 5px #000;
+    }
+    
+    .container h1{
+        text-transform: uppercase;
+        width: 100%;
+        padding: 7px 0;
+        text-align: center;
+        font-size: 24px;
+    }
+    
+    #tempo{
+        font-size: 100px;
+        font-weight: 600;
+        text-align: center;
+    }
+    
+    .ms{
+        width: 130px;
+        display: flex;
+        justify-content: space-between;
+        margin: 7px auto;
+    }
+    
+    .container select{
+        border: none;
+        border-radius: 4px;
+        height: 20px;
+        width: 35px;
+        text-align: center;
+        background-color: #f0f0fa;
+        box-shadow: 1px 1px 3px #bbb;
+        font-size: 10px;
+        font-weight: 700;
+        cursor: pointer;
+        margin-top: 3px;
+    }
+    
+    .listaMS{
+        font-weight: 800;
+        width: 66px;
+    }
+    
+    .btn{
+        min-width: 80px;
+        height: 28px;
+        background-color: rgb(57, 177, 224);
+        color: #fff;
+        font-size: 10px;
+        font-weight: bolder;
+        border: none;
+        border-radius: 4px;
+        box-shadow: 1px 1px 3px #0008;
+        cursor: pointer;
+    }
+    
+    .pausas{
+        padding: 4%;
+        margin: 0 4%;
+        display: flex;
+        justify-content: space-between;
+    }
 
-.ms{
-    width: 150px;
-    display: flex;
-    justify-content: space-between;
-    margin: 10px auto;
-}
-
-.container select{
-    border: none;
-    border-radius: 5px;
-    height: 25px;
-    width: 44px;
-    text-align: center;
-    background-color: #f0f0fa;
-    box-shadow: 1px 1px 3px #bbb;
-    font-size: 16px;
-    font-weight: 700;
-    cursor: pointer;
-}
-
-.listaMS{
-    font-weight: 800;
-    width: 100px;
-}
-
-.btn{
-    min-width: 23%;
-    height: 40px;
-    background-color: rgb(57, 177, 224);
-    color: #fff;
-    font-size: 15px;
-    font-weight: bolder;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px #0008;
-    cursor: pointer;
-}
-
-.pausas{
-    padding: 4%;
-    margin: 0 4%;
-    display: flex;
-    justify-content: space-between;
 }
