--- a/css/style.css
+++ b/css/style.css
@@ -20,148 +20,104 @@ body{
         margin: 5% auto 0 auto;
     }
 
-    .conteudo{
-        width: 100%;
-        height: 100%;
-        background-color: #fafafa;
-        border-radius: 15px;
-        box-shadow: 3px 3px 5px #000;
-    }
-    
-    .container h1{
-        text-transform: uppercase;
-        width: 100%;
-        padding: 10px 0;
-        text-align: center;
-    }
-    
     #tempo{
         font-size: 150px;
         font-weight: 600;
         text-align: center;
     }
-    
-    .ms{
-        width: 150px;
-        display: flex;
-        justify-content: space-between;
-        margin: 10px auto;
-    }
-    
-    .container select{
-        border: none;
-        border-radius: 5px;
-        height: 25px;
-        width: 44px;
+
+    .container h1{
+        text-transform: uppercase;
+        width: 100%;
         text-align: center;
-        background-color: #f0f0fa;
-        box-shadow: 1px 1px 3px #bbb;
-        font-size: 16px;
-        font-weight: 700;
-        cursor: pointer;
-    }
-    
-    .listaMS{
-        font-weight: 800;
-        width: 100px;
-    }
-    
-    .btn{
-        min-width: 120px;
-        height: 40px;
-        background-color: rgb(57, 177, 224);
-        color: #fff;
-        font-size: 15px;
-        font-weight: bolder;
-        border: none;
-        border-radius: 5px;
-        box-shadow: 1px 1px 3px #0008;
-        cursor: pointer;
-    }
-    
-    .pausas{
-        width: 90%;
-        padding: 5%;
-        display: flex;
-        justify-content: space-between;
     }
 
+    .listaMS{
+        font-weight: 800;
+        width: 17%;
+    }
+
+    .ms{
+        width: 25%;
+        display: flex;
+        justify-content: space-between;
+        margin: 2% auto;
+    }
 }
+
+
 
 @media only screen and (max-device-width: 700px){
 
     .container{
         max-width: 350px;
-        max-height: 56vh;
+        max-height: 50vh;
         margin: 5% auto 0 auto;
     }
 
-    .conteudo{
-        width: 100%;
-        height: 100%;
-        background-color: #fafafa;
-        border-radius: 10px;
-        box-shadow: 3px 3px 5px #000;
-    }
-    
-    .container h1{
-        text-transform: uppercase;
-        width: 100%;
-        padding: 7px 0;
-        text-align: center;
-        font-size: 24px;
-    }
-    
     #tempo{
-        font-size: 100px;
+        font-size: 120px;
         font-weight: 600;
         text-align: center;
-    }
-    
-    .ms{
-        width: 130px;
-        display: flex;
-        justify-content: space-between;
-        margin: 7px auto;
-    }
-    
-    .container select{
-        border: none;
-        border-radius: 4px;
-        height: 20px;
-        width: 35px;
+    }    
+
+    .container h1{
+        font-size: 22px;
+        text-transform: uppercase;
+        width: 100%;
         text-align: center;
-        background-color: #f0f0fa;
-        box-shadow: 1px 1px 3px #bbb;
-        font-size: 10px;
-        font-weight: 700;
-        cursor: pointer;
-        margin-top: 3px;
-    }
-    
-    .listaMS{
-        font-weight: 800;
-        width: 66px;
-    }
-    
-    .btn{
-        min-width: 70px;
-        height: 25px;
-        background-color: rgb(57, 177, 224);
-        color: #fff;
-        font-size: 10px;
-        font-weight: bolder;
-        border: none;
-        border-radius: 4px;
-        box-shadow: 1px 1px 3px #0008;
-        cursor: pointer;
-    }
-    
-    .pausas{
-        padding: 4%;
-        margin: 0 4%;
-        display: flex;
-        justify-content: space-between;
     }
 
+    .ms{
+        width: 45%;
+        display: flex;
+        justify-content: space-between;
+        margin: 2% auto;
+    }
+}
+
+.conteudo{
+    width: 100%;
+    height: 100%;
+    background-color: #fafafa;
+    border-radius: 15px;
+    box-shadow: 3px 3px 5px #000;
+}
+
+.btn{
+    width: 20%;
+    height: 28px;
+    margin: 0 2.5%;
+    background-color: rgb(57, 177, 224);
+    color: #fff;
+    font-size: 10px;
+    font-weight: bolder;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px #0008;
+    cursor: pointer;
+}
+
+.container select{
+    border: none;
+    border-radius: 5px;
+    width: 28%;
+    text-align: center;
+    background-color: #f0f0fa;
+    box-shadow: 1px 1px 3px #bbb;
+    font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.listaMS{
+    font-weight: 800;
+    width: 17%;
+}
+
+.pausas{
+    width: 100%;
+    padding: 5% 0;
+    display: flex;
+    justify-content: space-between;
 }
