--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,8 @@ body{
 }
 
 .pausas{
-    width: 100%;
+    width: 75%;
+    margin: 0 auto;
     padding: 5% 0;
     display: flex;
     justify-content: space-between;
