--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,17 @@
 body{
     background-color: #333;
     color: #000;
+    overflow: hidden;
+}
+
+@keyframes aparecendo {
+    0%{
+      transform: translateY(20rem);
+    }
+    100%{
+      transform: translateY(0);
+      opacity: 1;
+    }
 }
 
 
@@ -19,6 +30,8 @@ body{
         max-width: 600px;
         max-height: 70vh;
         margin: 5% auto 0 auto;
+        opacity: 0;
+        animation: aparecendo 1.5s 0.5s forwards;
     }
 
     #tempo{
@@ -80,6 +93,8 @@ body{
         max-width: 350px;
         max-height: 50vh;
         margin: 5% auto 0 auto;
+        opacity: 0;
+        animation: aparecendo 1.5s 0.5s forwards;
     }
 
     #tempo{
