--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
 
 @keyframes aparecendo {
     0%{
-      transform: translateY(20rem);
+      transform: translateY(100vh);
     }
     100%{
       transform: translateY(0);
