--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,9 @@ body{
     }
 
     .btn{
-        width: 120px;
+        width: 100%;
         height: 40px;
-        margin: 0 2.5%;
+        margin: 0 1%;
         background-color: rgb(57, 177, 224);
         color: #fff;
         font-size: 15px;
@@ -82,6 +82,11 @@ body{
         border-radius: 5px;
         box-shadow: 1px 1px 3px #0008;
         cursor: pointer;
+    }
+
+    .btn:hover{
+        background-color: rgb(13, 133, 180);
+        transition: all 0.3s;
     }
 }
 
@@ -134,9 +139,9 @@ body{
     }
 
     .btn{
-        width: 90px;
+        width: 100%;
         height: 30px;
-        margin: 0 2.5%;
+        margin: 0 1%;
         background-color: rgb(57, 177, 224);
         color: #fff;
         font-size: 12px;
@@ -145,6 +150,11 @@ body{
         border-radius: 5px;
         box-shadow: 1px 1px 3px #0008;
         cursor: pointer;
+    }
+
+    .btn:hover{
+        background-color: rgb(13, 133, 180);
+        transition: all 0.3s;
     }
 }
 
